tests/testcases/valid/classes/05_self_referential_methods.ciel
// Test: Class using itself in member function signatures
// Expected: No errors - class can use itself in method parameters and return types

class Node {
    private:
        int value;
    public:
        class Node getNext();
        void setNext(class Node n);
        class Node* getNextPtr();
};
