tests/testcases/invalid/semantic/40_param_redeclaration_in_function_scope.ciel
// Test: Class with itself as a data member (INVALID)
// Expected: Error - class cannot have itself as a non-pointer member

class Node {
    private:
        int value;
        class Node next;  // ERROR: recursive member
};
